# picoMacro

HW/picoMacro/: #auto_saved_files#  1.3_OLED_SH1106.sym  DisplayCustom.lib  LED_WS2812-2020.kicad_mod  fp-info-cache  fp-lib-table  picoMacro-cache.lib  picoMacro-rescue.lib  picoMacro.kicad_pcb  picoMacro.kicad_pcb-bak  picoMacro.kicad_prl  picoMacro.kicad_pro  picoMacro.kicad_sch  picoMacro.net  picoMacro.pro  picoMacro.sch  picoMacro.sch-bak  sym-lib-table
HW/picoMacro/gerber/: picoMacro-B_Cu.gbr  picoMacro-B_Mask.gbr  picoMacro-B_SilkS.gbr  picoMacro-Edge_Cuts.gbr  picoMacro-F_Cu.gbr  picoMacro-F_Mask.gbr  picoMacro-F_SilkS.gbr  picoMacro-job.gbrjob  picoMacro.drl
MacroControl/: main.py  test.py
PicoMacroC/: CMakeLists.txt  IMPORTANT_README.txt  TODO.txt  build.sh  config.h  kbScan.pio  main.c  main.cpp  upload.sh  ws2812.pio
PicoMacroC/lib/: config.h  kbScan.c  kbScan.cpp  kbScan.h  stdio_usb.c  tusb_config.h  usb_descriptors.c  usb_hid.c  usb_hid.cpp  usb_hid.h  wsLED.c  wsLED.cpp  wsLED.h
Picomacro/: PicoMacro.code-workspace  Picomacro.ino
Picomacro/stuff/: HID_table.h
